tests/paczka1/fuzzy1/78062507.err
Error in line 3: NaHfnarltZo A797 4,0
Error in line 8: MetGf66g A797 46,0
Error in line 17: 4oou A787 0,8
Error in line 19: K7mZfnCk0 A146 87,5
Error in line 24: NaHfnarltZo S985 45,3
Error in line 28: K7mZfnCk0 A787 17,7
